--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,9 @@ PyFileIO==0.0.5
 Pygments==2.13.0
 pyparsing==3.0.9
 pypiwin32==223
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
 python-dateutil==2.8.2
 PyWavelets==1.4.1
 pywin32==304
